--- a/modules/organizations/client/views/new-organization.client.view.html
+++ b/modules/organizations/client/views/new-organization.client.view.html
@@ -10,10 +10,9 @@
             </div>
 
             <div class="panel-body">
-
-                <tmpl-organizations-display-edit options="{{addOrganization.options}}"></tmpl-organizations-display-edit>
-
+                <tmpl-organizations-display-edit x-organization-id="{{addOrganization.organizationId}}" mode="add"></tmpl-organizations-display-edit>
             </div>
+
         </div>
     </div>
     <div class='col-sm-2'>
