Moving to ProjectModel service

--- a/modules/core/client/views/menu.client.view.html
+++ b/modules/core/client/views/menu.client.view.html
@@ -118,7 +118,7 @@
 			</li>
 		</ul>
 		<ul class="list-unstyled" ng-show="menu.authentication.user">
-			<li><a x-modal-project-entry href x-project="menu.project">Edit {{ menu.project.name }}</a></li>
+			<li><a x-modal-project-entry href x-project="menu.project">Edit Project</a></li>
 			<li><a x-modal-project-schedule href x-project="menu.project">Edit Schedule</a></li>
 		</ul>
 	</div>
