--- a/modules/projects/client/views/project-partials/modal-project-entry.html
+++ b/modules/projects/client/views/project-partials/modal-project-entry.html
@@ -181,7 +181,7 @@
 
 
 <div class="modal-footer">
-	<div class="pull-left" ng-if="projectEntry.project.dateUpdated">{{ projectEntry.project.dateUpdated}}
+	<div class="pull-left" ng-if="projectEntry.project.dateUpdated">
 		<div class="form-control-static">{{ projectEntry.project.dateUpdated | amDateFormat:'MMM Do, YYYY hh:mm a' }}</div>
 	</div>
 	<div>
