--- a/modules/projects/client/views/project-partials/project-tombstone.html
+++ b/modules/projects/client/views/project-partials/project-tombstone.html
@@ -12,7 +12,10 @@
 		</div>
 
 		<div class='col-sm-6'>
-			<div><label class="control-label">Description</label><p>{{ projTomb.project.description }}</p></div>
+			<div>
+				<label class="control-label">Description</label>
+				<div ng-bind-html="projTomb.project.description"></div>
+			</div>
 		</div>
 
 	</div>
