--- a/modules/organizations/client/views/view-organization.client.view.html
+++ b/modules/organizations/client/views/view-organization.client.view.html
@@ -10,10 +10,7 @@
             </div>
 
             <div class="panel-body">
-                <tmpl-organizations-display-edit x-organization-id="{{viewOrganization.organizationId}}" x-mode="display">asdfasdf</tmpl-organizations-display-edit>
-                
-                <tmpl-users-by-org x-organization-id="{{viewOrganization.organizationId}}" x-mode="display"></tmpl-users-by-org>
-
+                <tmpl-organizations-display-edit x-organization-id="{{viewOrganization.organizationId}}" x-mode="display"></tmpl-organizations-display-edit>
             </div>
 
         </div>
