--- a/modules/users/client/views/admin/edit-user.client.view.html
+++ b/modules/users/client/views/admin/edit-user.client.view.html
@@ -11,16 +11,10 @@
         <h3 class="panel-title">Edit User: {{user.username}}</h3>
       </div>
       <div class="panel-body">
-        <form name="userForm" ng-submit="update(userForm.$valid)" novalidate>
-          <div class="row">
-            <div class="col-sm-3">
-              <a class="btn btn-default" ui-sref="admin.user({userId: user._id})"><i class="glyphicon glyphicon-chevron-left
-"></i> View {{user.username}}</a>
-              <hr class="visible-xs">
-            </div>
-            <div class="col-sm-9">
+        <form name="userForm" ng-submit="update(userForm.$valid)" validate>
+
               <div class="row">
-                <div class="col-sm-6">
+                <div class="col-sm-4">
                   <div class="form-group show-errors">
                     <label for="firstName" class="control-label">First Name</label>
                     <input type="text" id="firstName" name="firstName" class="form-control" ng-model="user.firstName" placeholder="First Name" required />
@@ -29,12 +23,21 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-4">
                   <div class="form-group" show-errors>
                     <label for="lastName" class="control-label">Last Name</label>
                     <input type="text" id="lastName" name="lastName" class="form-control" ng-model="user.lastName" placeholder="Last Name" required />
                     <div ng-messages="userForm.lastName.$error" role="alert">
                       <p class="help-block error-text" ng-message="required">Last name is required.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm-4">
+                  <div class="form-group" show-errors>
+                    <label for="email" class="control-label">Email</label>
+                    <input type="text" id="email" name="email" class="form-control" ng-model="user.email" placeholder="Last Name" required />
+                    <div ng-messages="userForm.email.$error" role="alert">
+                      <p class="help-block error-text" ng-message="required">email is required.</p>
                     </div>
                   </div>
                 </div>
@@ -62,8 +65,6 @@
                 </div>
               </div>
 
-            </div>
-          </div>
         </form>
 
       </div>
