--- a/modules/users/client/views/admin/view-user.client.view.html
+++ b/modules/users/client/views/admin/view-user.client.view.html
@@ -10,66 +10,51 @@
         <h3 class="panel-title">User: {{user.username}}</h3>
       </div>
       <div class="panel-body">
-        <div class="row">
-          <div class="col-sm-3">
-            <a class="btn btn-default" ui-sref="admin.users"><i class="glyphicon glyphicon-chevron-left
-"></i> View All Users</a>
-            <hr class="visible-xs">
-          </div>
-          <div class="col-sm-9">
-            <div class="row">
-              <div class="col-sm-6">
-                <div class="form-group">
-                  <label for="firstName" class="control-label">First Name</label>
-                  <p id="firstName" ng-bind="user.firstName"></p>
-                </div>
-              </div>
-              <div class="col-sm-6">
-                <div class="form-group">
-                  <label for="lastName" class="control-label">Last Name</label>
-                  <p id="lastName" ng-bind="user.lastName"></p>
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-sm-6">
-                <div class="form-group">
-                  <label for="userEmail" class="control-label">Email</label>
-                  <p id="userEmail" ng-bind="user.email"></p>
-                </div>
-              </div>
-              <div class="col-sm-6">
-                <div class="form-group">
-                  <label for="provider" class="control-label">Provider</label>
-                  <p id="provider" ng-bind="user.provider"></p>
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-sm-6">
-                <div class="form-group">
-                  <label for="created" class="control-label">Created</label>
-                  <p id="created" ng-bind="user.created"></p>
-                </div>
-              </div>
-              <div class="col-sm-6">
-                <div class="form-group">
-                  <label for="roles" class="control-label">Roles</label>
-                  <p id="roles" ng-bind="user.roles"></p>
-                </div>
-              </div>
-            </div>
-            <div class="text-right">
-              <a class="btn btn-default" ui-sref="admin.user-edit({userId: user._id})">
-                <i class="glyphicon glyphicon-edit"></i> Edit
-              </a>
-              <a class="btn btn-default" ng-click="remove();" ng-if="user._id !== authentication.user._id">
-                <i class="glyphicon glyphicon-trash"></i> Delete
-              </a>
-            </div>
 
+        <div class="row">
+          <div class="col-sm-8">
+            <div class="form-group">
+              <label for="name" class="control-label">Name</label>
+              <p id="name" ng-bind="user.firstName + ' ' + user.lastName"></p>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="form-group">
+              <label for="userEmail" class="control-label">Email</label>
+              <p id="userEmail" ng-bind="user.email"></p>
+            </div>
+          </div>
+          <div class="col-sm-12">
+            <hr/>
+          </div>
+          <div class="col-sm-4">
+            <div class="form-group">
+              <label for="created" class="control-label">Created</label>
+              <p id="created" ng-bind="user.created"></p>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="form-group">
+              <label for="roles" class="control-label">Roles</label>
+              <p id="roles" ng-bind="user.roles"></p>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="form-group">
+              <label for="provider" class="control-label">Provider</label>
+              <p id="provider" ng-bind="user.provider"></p>
+            </div>
           </div>
         </div>
+        <div class="text-right">
+          <a class="btn btn-default" ui-sref="admin.user-edit({userId: user._id})">
+            <i class="glyphicon glyphicon-edit"></i> Edit
+          </a>
+          <a class="btn btn-default" ng-click="remove();" ng-if="user._id !== authentication.user._id">
+            <i class="glyphicon glyphicon-trash"></i> Delete
+          </a>
+        </div>
+
       </div>
     </div>
   </div>
@@ -77,55 +62,55 @@
     <tmpl-system-menu x-menu-context="settings"></tmpl-system-menu>
   </div>
 
-<!--
-  <div class="page-header">
-    <div class="row">
-      <div class="col-md-6">
-        <h1 ng-bind="user.username"></h1>
-      </div>
-      <div class="col-md-4">
-        <a class="btn btn-primary" ui-sref="admin.user-edit({userId: user._id})">
-          <i class="glyphicon glyphicon-edit"></i>
-        </a>
-        <a class="btn btn-primary" ng-click="remove();" ng-if="user._id !== authentication.user._id">
-          <i class="glyphicon glyphicon-trash"></i>
-        </a>
+  <!--
+    <div class="page-header">
+      <div class="row">
+        <div class="col-md-6">
+          <h1 ng-bind="user.username"></h1>
+        </div>
+        <div class="col-md-4">
+          <a class="btn btn-primary" ui-sref="admin.user-edit({userId: user._id})">
+            <i class="glyphicon glyphicon-edit"></i>
+          </a>
+          <a class="btn btn-primary" ng-click="remove();" ng-if="user._id !== authentication.user._id">
+            <i class="glyphicon glyphicon-trash"></i>
+          </a>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="row">
-    <div class="col-md-8">
-      <div class="row">
-        <div class="col-md-3"><strong>First Name</strong></div>
-        <div class="col-md-6" ng-bind="user.firstName"></div>
-      </div>
-      <hr/>
-      <div class="row">
-        <div class="col-md-3"><strong>Last Name</strong></div>
-        <div class="col-md-6" ng-bind="user.lastName"></div>
-      </div>
-      <hr/>
-      <div class="row">
-        <div class="col-md-3"><strong>Email</strong></div>
-        <div class="col-md-6" ng-bind="user.email"></div>
-      </div>
-      <hr/>
-      <div class="row">
-        <div class="col-md-3"><strong>Provider</strong></div>
-        <div class="col-md-6" ng-bind="user.provider"></div>
-      </div>
-      <hr/>
-      <div class="row">
-        <div class="col-md-3"><strong>Created</strong></div>
-        <div class="col-md-6" ng-bind="user.created"></div>
-      </div>
-      <hr/>
-      <div class="row">
-        <div class="col-md-3"><strong>Roles</strong></div>
-        <div class="col-md-6" ng-bind="user.roles"></div>
+    <div class="row">
+      <div class="col-md-8">
+        <div class="row">
+          <div class="col-md-3"><strong>First Name</strong></div>
+          <div class="col-md-6" ng-bind="user.firstName"></div>
+        </div>
+        <hr/>
+        <div class="row">
+          <div class="col-md-3"><strong>Last Name</strong></div>
+          <div class="col-md-6" ng-bind="user.lastName"></div>
+        </div>
+        <hr/>
+        <div class="row">
+          <div class="col-md-3"><strong>Email</strong></div>
+          <div class="col-md-6" ng-bind="user.email"></div>
+        </div>
+        <hr/>
+        <div class="row">
+          <div class="col-md-3"><strong>Provider</strong></div>
+          <div class="col-md-6" ng-bind="user.provider"></div>
+        </div>
+        <hr/>
+        <div class="row">
+          <div class="col-md-3"><strong>Created</strong></div>
+          <div class="col-md-6" ng-bind="user.created"></div>
+        </div>
+        <hr/>
+        <div class="row">
+          <div class="col-md-3"><strong>Roles</strong></div>
+          <div class="col-md-6" ng-bind="user.roles"></div>
+        </div>
       </div>
     </div>
-  </div>
-  -->
+    -->
 </section>
