--- a/modules/core/client/views/menu.client.view.html
+++ b/modules/core/client/views/menu.client.view.html
@@ -120,6 +120,7 @@
 		<ul class="list-unstyled" ng-show="menu.authentication.user">
 			<li><a x-modal-project-entry href x-project="menu.project">Edit Project</a></li>
 			<li><a x-modal-project-schedule href x-project="menu.project">Edit Schedule</a></li>
+			<li><a x-modal-users-by-roles href x-project="menu.project">Edit Project Users</a></li>			
 		</ul>
 	</div>
 
