--- a/modules/core/client/views/menu.client.view.html
+++ b/modules/core/client/views/menu.client.view.html
@@ -121,6 +121,7 @@
 			<li><a x-modal-project-entry href x-project="menu.project">Edit Project</a></li>
 			<li><a x-modal-project-schedule href x-project="menu.project">Edit Schedule</a></li>
 			<li><a x-modal-users-by-roles href x-project="menu.project">Edit Project Users</a></li>			
+			<li><a x-modal-project-vc href x-project="menu.project">Edit VC</a></li>
 		</ul>
 	</div>
 
