Re organized document approvals. Undo flattening of review documents. Integrate uploader into document management. Disable Review documents (temp) Add value components UI to project.

--- a/modules/documents/client/views/partials/document-approvals.html
+++ b/modules/documents/client/views/partials/document-approvals.html
@@ -22,7 +22,7 @@
 
 					<li ng-repeat="doc in docBrowser.rdocumentFiles | filter : rfilterDocs : true">
 						<a ng-click="docBrowser.rDoc=doc" href="">
-							<span class="glyphicon glyphicon-file"></span>{{ doc.documentFileName }}
+							<span class="glyphicon glyphicon-file"></span>{{ doc.internalName }}
 						</a>
 					</li>
 				</ul>
