--- a/modules/documents/client/views/partials/document-browser.html
+++ b/modules/documents/client/views/partials/document-browser.html
@@ -21,7 +21,7 @@
 				<ul class="small list-unstyled list-documents list-indent-left">
 
 					<li ng-repeat="doc in docBrowser.documentFiles | filter : filterDocs : true" >
-						<a ng-mouseover="docBrowser.filterSummary(doc)" href="{{ doc.documentFileURL }}"><span class="glyphicon glyphicon-file"></span>{{ doc.documentFileName }} </a>
+						<a ng-mouseover="docBrowser.filterSummary(doc)" href="{{ doc.internalURL }}"><span class="glyphicon glyphicon-file"></span>{{ doc.internalName }} </a>
 					</li>
 				</ul>
 
@@ -32,8 +32,8 @@
 					<li>
 						<h3>Executive Summary</h3>
 						<p>Date Posted: {{ filterSummary.projectFolderDatePosted | date : format : timezone }}</p>
-						<p>File Format: {{ filterSummary.documentFileFormat }}</p>
-						<p>File Size: {{ filterSummary.documentFileSize }}</p>
+						<p>File Format: {{ filterSummary.internalMime }}</p>
+						<p>File Size: {{ filterSummary.MBytes }} MB</p>
 						<p>In Review?: {{ filterSummary.documentIsInReview?'Yes':'No' }}</p>
 						<!-- NB: Project folders are authors in EPIC:  We override this behavior here -->
 						<p>Author: {{ filterSummary.documentAuthor }}</p>
@@ -46,9 +46,9 @@
 					<li>
 						Revisions:
 					</li>
-					<li ng-repeat="docVersion in docBrowser.docVersions">
+					<!-- <li ng-repeat="docVersion in docBrowser.docVersions">
 						<a href="{{ docVersion.documentFileURL }}">{{ docVersion.dateUpdated | date : format : timezone}}: {{ docVersion.documentVersion }} <span class="glyphicon glyphicon-download"></span></a>
-					</li>
+					</li> -->
 				</ul>
 			</div>
 		</div>
