--- a/modules/projects/client/views/project-partials/modal-project-vc.html
+++ b/modules/projects/client/views/project-partials/modal-project-vc.html
@@ -1,11 +1,48 @@
 <div class="modal-header">
-	<h3 class="modal-title">Edit VC</h3>
+	<h3 class="modal-title">Project Value Components</h3>
 </div>
 
 <div class="modal-body">
+    <table class="table table-condensed table-hover">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Number of Public Communications</th>
+                <th>Number of Working Group Comments</th>
+                <th>Responded?</th>
+            </tr>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
+    <table class="table table-condensed table-hover">
+        <div class="row">
+            <div class="form-group col-sm-3">
+                <select ng-model="projectVC.newStreamId"
+                        class="form-control ng-pristine ng-untouched ng-valid"
+                        ng-options="stream._id as stream.name for stream in projectVC.streams"
+                        ng-disabled="projectVC.project.status !== 'Submitted'">
+                    <option value="" class=""></option>
+                    <option value="0" label="Test Stream Alpha">Add Custom VC</option>
+                </select>
+            </div>
+            <div class="col-sm-4">
+                <input class="form-control ng-pristine ng-valid ng-isolate-scope ng-touched"
+                        type="text"
+                        ng-model="configDataElement.activeRecord.name"
+                        x-kebab-this=""
+                        x-source="configDataElement.activeRecord.name"
+                        x-destination="configDataElement.activeRecord.code">
+            </div>
+            <div>
+                <button class="btn" type="button" ng-click="projectVC.addVC()">Add</button>
+                <a x-modal-project-vc-entry href x-project="menu.project">Edit Specific VC</a>
+            </div>
+        </div>
+    </table>
 </div>
 
 <div class="modal-footer">
-	<button class="btn btn-default" type="button" ng-click="projVC.cancel()">Cancel</button>
-	<button class="btn btn-primary" type="button" ng-click="projVC.ok()">Save</button>
+	<button class="btn btn-default" type="button" ng-click="projectVC.cancel()">Cancel</button>
+	<button class="btn btn-primary" type="button" ng-click="projectVC.ok()">Save</button>
 </div>
