--- a/modules/projects/client/views/project-partials/project-initiated.html
+++ b/modules/projects/client/views/project-partials/project-initiated.html
@@ -6,6 +6,6 @@
 		<p>You're able to edit this project until it's ready to submit for an initial review.</p>
 		<p>When ready, click the <em>Submit Project</em> button at the bottom of the Edit Project window.</p>
 		<hr>
-		<a class="btn btn-success"x-modal-project-entry href x-project="projectInitiated.newproject">Edit Project</a>
+		<a class="btn btn-success"x-modal-project-entry href x-project="projectInitiated.project">Edit Project</a>
 	</div> <!-- /panel -->
 </section>
