--- a/modules/documents/client/views/partials/document-upload-classify.html
+++ b/modules/documents/client/views/partials/document-upload-classify.html
@@ -18,7 +18,7 @@
 			<tr class="small">
 				<th width="30%">File</th>
 				<th width="30%">Type</th>
-				<th width="30%">Tags</th>
+				<th width="30%">Sub Type</th>
 				<th width="10%"></th>
 			</tr>
 		</thead>
@@ -48,6 +48,9 @@
 				<td ng-if="!f.$error && !f.progress">
 					<select class="form-control" ng-options="type as type.name group by (type.group | uppercase) for type in docUpload.docTypes track by type.code" ng-model="f.docType"></select>
 				</td>
+				<td ng-if="!f.$error && !f.progress">
+					<select class="form-control" ng-options="stype as stype.name group by (stype.group | uppercase) for stype in docUpload.docSubTypes track by stype.code" ng-model="f.docSubType"></select>
+				</td>
 				<td ng-if="!f.$error && !f.progress" class="text-right">
 					<p class="form-control-static"><a href ng-click="docUpload.removeFile(f)"><span class="glyphicon glyphicon-remove"></span></a></p>
 				</td>
@@ -58,7 +61,7 @@
 				</td>
 
 				<td ng-if="!f.$error && f.progress">
-
+					<p class="form-control-static">{{ f.docType.subTypeName }}</p>
 				</td>
 
 
