add / save project UI , document upload partially complete

--- a/modules/core/client/views/menu.client.view.html
+++ b/modules/core/client/views/menu.client.view.html
@@ -155,9 +155,9 @@
 	</div>
 	<div ng-show="menu.authentication.user">
 		<hr>
-		<label class="control-label">User</label>
+		<label class="control-label">Welcome, {{ menu.authentication.user.displayName }}</label>
 		<ul class="list-unstyled">
-			<li><a href ui-sref="settings.profile">My Profile</a></li>
+			<li><a href ui-sref="settings.profile">Profile</a></li>
 			<li><a href="/api/auth/signout" target="_self">Logout</a></li>
 	  	</ul>
 	</div>
