--- a/modules/documents/client/views/partials/document-browser.html
+++ b/modules/documents/client/views/partials/document-browser.html
@@ -1,6 +1,6 @@
 <section class="block-content">
 	<h3>
-	<a href class="small pull-right" x-modal-document-upload-classify><span class="glyphicon glyphicon-upload"></span> Upload</a>
+	<a href class="small pull-right" x-modal-document-upload-classify x-project="docBrowser.project"><span class="glyphicon glyphicon-upload"></span> Upload</a>
 	Documents</h3>
 
 	<div class='container-fluid'>
