document upload fix.  activity positioning fix.

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -271,7 +271,11 @@ ul.list-indent-left {
 .list-documents li.active a {
 	color: #ffffff;
 }
-
+.list-documents .btn-download {
+	position: absolute;
+	top: 0;
+	right: 15px;
+}
 .list-documents li:first-child,
 .list-tasks li:first-child {
 	border-top: none
