--- a/modules/maps/client/views/partials/map-layers.html
+++ b/modules/maps/client/views/partials/map-layers.html
@@ -23,7 +23,7 @@
 						</li>
 					</ul>
 				</div>
-				<label class="control-label">Shared Layers</label>
+<!-- 				<label class="control-label">Shared Layers</label>
 				<div class="well well-sm">
 					<ul class="list-unstyled task-list">
 						<li ng-repeat="layer in mpl.sharedLayers">
@@ -31,7 +31,7 @@
 						</li>
 					</ul>
 				</div>
-			</div>
+ -->			</div>
 		</div>
 	</div>
 </section>
