--- a/modules/projects/client/views/project-partials/project-activities.html
+++ b/modules/projects/client/views/project-partials/project-activities.html
@@ -9,7 +9,7 @@
 				<label class="control-label">Phases</label>
 				<ul class="list-unstyled task-list">
 					<li ng-repeat="phase in projectActs.phases">
-						<button class="btn btn-block btn-sm btn-default" ng-class="{'btn-primary': projectActs.selectedPhase._id === phase._id}" ng-click="projectActs.selectPhase(phase)">{{ phase.name }}</button>
+						<button class="btn btn-block btn-sm btn-default" ng-class="{'btn-primary': projectActs.selectedPhase === phase._id}" ng-click="projectActs.selectPhase(phase._id)">{{ phase.name }}</button>
 					</li>
 				</ul>
 
@@ -18,7 +18,7 @@
 				<label class="control-label">Milestones</label>
 				<ul class="list-unstyled task-list">
 					<li ng-repeat="milestone in projectActs.milestones">
-						<button class="btn btn-block btn-sm btn-default" ng-class="{'btn-primary': projectActs.selectedMilestone._id === milestone._id}" ng-click="projectActs.selectMilestone(milestone)">{{ milestone.name }}</button>
+						<button class="btn btn-block btn-sm btn-default" ng-class="{'btn-primary': projectActs.selectedMilestone === milestone._id}" ng-click="projectActs.selectMilestone(milestone._id)">{{ milestone.name }}</button>
 					</li>
 					<li ng-if="!projectActs.milestones || projectActs.milestones.length === 0">
 						No Milestones defined.
