--- a/modules/core/client/views/menu.client.view.html
+++ b/modules/core/client/views/menu.client.view.html
@@ -66,7 +66,7 @@
 
 		<div ng-show="menu.authentication.user">
 			<ul class="list-unstyled">
-				<li><a href ui-sref="settings.profile">My Tasks</a></li>
+				<li><a href ui-sref="activities">My List</a></li>
 			</ul>
 			<hr>
 		</div>
@@ -99,7 +99,7 @@
 		<div ng-show="menu.authentication.user">
 			<hr>
 			<ul class="list-unstyled">
-				<li><a href ui-sref="settings.profile">My Tasks</a></li>
+				<li><a href ui-sref="activities">My List</a></li>
 			</ul>
 		</div>
 
